--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,17 @@
         <button id="update-button">Replace Michael's quote</button>
     </div>
 
+    <div>
+        <h2>Remove Dwight!</h2>
+        <p>
+            Delete the quote to flush the nonsense!
+        </p>
+        <button id="delete-button">Delete Dwight's Quote</button>
+    </div>
+    <div id="message">
+
+    </div>
+
     <script src="/main.js"></script>
 </body>
 
