added message feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,8 @@
         <button id="update-button">Replace Michael's quote</button>
     </div>
 
+    <div id="message"></div>
+
     <script src="/main.js"></script>
 </body>
 
